manifests/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semesterly
  namespace: semesterly-prod
spec:
  selector:
    matchLabels:
      app: semesterly
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: semesterly
    spec:
      containers:
      - name: nginx
        image: semesterly.azurecr.io/semesterly-nginx:Version
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 60
        resources:
          requests:
            cpu: 100m
            memory: 250M
          limits:
            cpu: 250m
            memory: 500M
      - name: pgbouncer
        image: uisacr.azurecr.io/pgbouncer:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /etc/pgbouncer/client_root_ca.crt
          name: semesterly-az-postgres-tls-root-ca
          subPath: client_root_ca.crt
        resources:
          requests:
            cpu: 500m
          limits:
            cpu: 2048m
            memory: 4096M
      - name: gunicorn
        image: semesterly.azurecr.io/semesterly:Version
        command: ["bash"]
        args: ["-c","python manage.py migrate; gunicorn semesterly.wsgi wsgi:application --bind=0.0.0.0:8000 --preload --workers=16 --max-requests=16384 --access-logfile - --error-logfile - --log-level info"]
        workingDir: /code
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 60
        resources:
          requests:
            cpu: "2"
            memory: 2000M
          limits:
            cpu: "4"
            memory: 4000M
      volumes:
      - configMap:
          defaultMode: 420
          name: semesterly-az-postgres-tls-root-ca.crt
        name: semesterly-az-postgres-tls-root-ca
